# -

./: .gitignore  AGENTS.md  修仙模拟器-Git协作指南.md  修仙模拟器-三周开发计划与分工-v2.md  修仙模拟器-角色分工文档.md
ai_agent_framework/: README.md  config.yaml  pyproject.toml  requirements.txt
ai_agent_framework/data/demo_store/: sources.json
ai_agent_framework/docs/: API.md  EXTENSION.md
ai_agent_framework/docs/plans/: 2026-07-13-ai-agent-framework.md
ai_agent_framework/examples/: demo_rag.py
ai_agent_framework/examples/sample_docs/: rag_intro.md  usage.txt
ai_agent_framework/src/ai_agent_framework/: __init__.py
ai_agent_framework/src/ai_agent_framework/api/: __init__.py  cli.py  server.py
ai_agent_framework/src/ai_agent_framework/config/: __init__.py  settings.py
ai_agent_framework/src/ai_agent_framework/core/: __init__.py  agent.py  base.py  llm.py  registry.py
ai_agent_framework/src/ai_agent_framework/knowledge/: __init__.py  manager.py
ai_agent_framework/src/ai_agent_framework/plugins/: __init__.py  loader.py
ai_agent_framework/src/ai_agent_framework/rag/: __init__.py  embeddings.py  generator.py  loaders.py  retrievers.py  splitters.py  vectorstore.py
ai_agent_framework/src/ai_agent_framework/tools/: __init__.py  base.py  builtin.py
ai_agent_framework/tests/: conftest.py  test_agent.py  test_agent_edge.py  test_concurrency.py  test_config.py  test_generator.py  test_integration.py  test_knowledge.py  test_loaders.py  test_plugins.py  test_retrievers.py  test_server.py  test_splitters.py  test_tools.py  test_vectorstore.py
backend/: pytest.ini  requirements.txt
(+153 files in other folders)
