[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-framework"
version = "0.1.0"
description = "通用 AI Agent 框架，内置完整 RAG 能力，可扩展定制"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.3",
    "langchain-community>=0.3",
    "chromadb>=0.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pypdf>=4.0",
    "rank-bm25>=0.2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
aiagent = "ai_agent_framework.api.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
